[CI] Publish Documentation for 7398171ef7e2fd7e3e3efccee48ab2dc4e861e91 - 7398171ef7e2fd7e3e3efccee48ab2dc4e861e91 🚀

--- a/debugging/5.0/introduction.html
+++ b/debugging/5.0/introduction.html
@@ -132,51 +132,48 @@
 <p><em>2 MINUTE EXERCISE</em></p>
 </div>
 <div class="paragraph">
-<p>In this workshop you will learn how to develop and deploy a microservices based application.</p>
+<p>After a long and frustrated morning spending hours to solve an issue that a colleague, passing by chance with his/her
+cup of coffee, fixed in literally 5 seconds, you are finally ready to start your normal working day when &#8230;&#8203;</p>
 </div>
 <div class="paragraph">
-<p>The overall architecture of the application that you will deploy is the following:</p>
-</div>
-<div class="imageblock">
-<div class="content">
-<img src="_images/coolstore-arch.png" alt="Coolstore Architecture" width="400">
-</div>
+<p>Your manager suddenly comes out of his/her office and walks to you with the very known face that saying <strong>"You are in trouble!"</strong>.
+Indeed, the new release of a <strong><strong>Mysterious Application</strong></strong> is planned for tonight (everything is always urgent) and it seems to contain some bugs.</p>
 </div>
 <div class="paragraph">
-<p>During the various steps of the the workshop you will use CodeReady Workspaces, an online IDE that is running on Red Hat OpenShift to write, test and deploy these services:</p>
+<p>And of course, the developer who worked on this last release is now drinking some mojitos on the paradise island and you are the
+only one available who can save the situation. Your manager points the source code <a href="https://github.com/mcouliba/cloud-native-labs/tree/debugging" target="_blank" rel="noopener">Mysterious Application</a> out,
+gives you a gentle tap on the shoulder and says "Bon Courage!".</p>
+</div>
+<div class="paragraph">
+<p>At that moment in time, you feel like you are on an island, but not the same one than your colleague.</p>
+</div>
+<div class="paragraph">
+<p>Now you have to:</p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p><strong>Catalog Service</strong> exposes using a REST API content of a catalog stored in a relational database</p>
+<p>Identify the right tools to build and run the <strong><strong>Mysterious Application</strong></strong></p>
 </li>
 <li>
-<p><strong>Inventory Service</strong> exposes using a REST API the inventory stored in a relational database</p>
+<p>Install them on your environment</p>
 </li>
 <li>
-<p><strong>Gateway Service</strong> calls the <strong>Catalog Service</strong> and <strong>Inventory Service</strong> in an efficient way</p>
+<p>Build your application which could be composed by several heterogeneous languages</p>
 </li>
 <li>
-<p><strong>WebUI Service</strong> calls <strong>Gateway Service</strong> to retrieve all the informations.</p>
+<p>Test, deploy, run it</p>
+</li>
+<li>
+<p>&#8230;&#8203;</p>
 </li>
 </ul>
 </div>
 <div class="paragraph">
-<p>The outcome is an online store with a catalog of product items and an inventory of stock:</p>
-</div>
-<div class="imageblock">
-<div class="content">
-<img src="_images/coolstore-web.png" alt="CoolStore Shop" width="840">
-</div>
+<p>Piouf!! Lots of things to do in a short period of time&#8230;&#8203;</p>
 </div>
 <div class="paragraph">
-<p>In addition to the application code, you will learn how to deploy the various services to OpenShift and how to use it to route the trafic to these services and monitor them.</p>
-</div>
-<div class="paragraph">
-<p>You will also have the opportunity to look at some optional steps such as debugging, continuous delivery, externalized configuration and more.</p>
-</div>
-<div class="paragraph">
-<p>Let&#8217;s start the workshop with the discovery of OpenShift and CodeReady Workspaces.</p>
+<p><strong>"No Worry Be Happy"</strong>, Red Hat OpenShift Container Platform, Inc is here to help!!</p>
 </div>
 <nav class="pagination">
   <span class="prev"><a href="index.html" class="query-params-link">OpenShift Debugging Workshop</a></span>
