--- a/debugging/5.0/developer-workspace.html
+++ b/debugging/5.0/developer-workspace.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Get your Developer Workspace :: OpenShift Debugging Workshop</title>
+    <title>You are not alone :: OpenShift Debugging Workshop</title>
     <link rel="canonical" href="https://redhat-scholars.github.io/course-template/debugging/5.0/developer-workspace.html">
     <link rel="prev" href="introduction.html">
     <link rel="next" href="reproduce-environment.html">
@@ -127,7 +127,7 @@
   </div>
   <div class="content">
 <article class="doc">
-<h1 class="page">Get your Developer Workspace</h1>
+<h1 class="page">You are not alone</h1>
 <div id="preamble">
 <div class="sectionbody">
 <div class="paragraph">
@@ -144,7 +144,7 @@ and getting familiar with the OpenShift CLI and OpenShift Web Console.</p>
 <div class="sectionbody">
 <div class="sidebarblock">
 <div class="content">
-<div class="imageblock text-center">
+<div class="imageblock">
 <div class="content">
 <img src="_images/codereadyworkspaces-logo.png" alt="CodeReady Workspaces" width="400">
 </div>
@@ -239,9 +239,9 @@ to this file.</p>
 <div class="paragraph">
 <p><code><strong>Click on the 'Developer Workspace' button below</strong></code></p>
 </div>
-<div class="imageblock text-center params-link">
+<div class="imageblock params-link">
 <div class="content">
-<a class="image" href="http://codeready-workspaces.%APPS_HOSTNAME_SUFFIX%/dashboard/#/ide/user%USER_ID%/wksp-cloud-native" target="_blank" rel="noopener"><img src="_images/developer-workspace-button.svg" alt="Developer Workspace - Button" width="300"></a>
+<a class="image" href="http://codeready-workspaces.%APPS_HOSTNAME_SUFFIX%/dashboard/#/ide/user%USER_ID%/wksp-debugging"><img src="_images/developer-workspace-button.svg" alt="Developer Workspace - Button" width="300"></a>
 </div>
 </div>
 <div class="paragraph">
@@ -258,25 +258,6 @@ to this file.</p>
 <div class="imageblock">
 <div class="content">
 <img src="_images/che-workspace.png" alt="Che - Workspace" width="800">
-</div>
-</div>
-</div>
-</div>
-<div class="sect1">
-<h2 id="what_is_odo"><a class="anchor" href="#what_is_odo"></a>What is OpenShift Do (odo)?</h2>
-<div class="sectionbody">
-<div class="sidebarblock">
-<div class="content">
-<div class="title">OpenShift Do (odo)</div>
-<div class="paragraph">
-<p><a href="https://docs.openshift.com/container-platform/4.6/cli_reference/developer_cli_odo/understanding-odo.html" target="_blank" rel="noopener">OpenShift Do (odo)</a> is a CLI tool for creating applications on OpenShift Container Platform and Kubernetes.
-With <a href="https://docs.openshift.com/container-platform/4.6/cli_reference/developer_cli_odo/understanding-odo.html" target="_blank" rel="noopener">odo</a>, you can write, build, and debug applications on a cluster without the need to administer the cluster itself.
-Creating deployment configurations, build configurations, service routes and other OpenShift Container Platform or Kubernetes elements are all automated by <a href="https://docs.openshift.com/container-platform/4.6/cli_reference/developer_cli_odo/understanding-odo.html" target="_blank" rel="noopener">odo</a>.</p>
-</div>
-<div class="paragraph">
-<p>Existing tools such as <a href="https://docs.openshift.com/container-platform/4.6/cli_reference/openshift_cli/getting-started-cli.html" target="_blank" rel="noopener">OpenShift CLI (oc)</a> are operations-focused and require a deep understanding of Kubernetes and OpenShift Container Platform concepts.
-<a href="https://docs.openshift.com/container-platform/4.6/cli_reference/developer_cli_odo/understanding-odo.html" target="_blank" rel="noopener">odo</a> abstracts away complex Kubernetes and OpenShift Container Platform concepts allowing developers to focus on what is most important to them: <strong>code</strong>.</p>
-</div>
 </div>
 </div>
 </div>
@@ -315,7 +296,7 @@ Creating deployment configurations, build configurations, service routes and oth
 </div>
 <div class="listingblock copypaste">
 <div class="content">
-<pre class="highlightjs highlight"><code class="language-shell hljs" data-lang="shell">odo login $(oc whoami --show-server) --username=user%USER_ID% --password=%OPENSHIFT_PASSWORD% --insecure-skip-tls-verify</code></pre>
+<pre class="highlightjs highlight"><code class="language-shell hljs" data-lang="shell">oc login $(oc whoami --show-server) --username=user%USER_ID% --password=%OPENSHIFT_PASSWORD% --insecure-skip-tls-verify</code></pre>
 </div>
 </div>
 <div class="admonitionblock note">
@@ -342,69 +323,11 @@ To open a '&gt;_ workshop_tools' terminal window, <code><strong>click on 'Termin
 
 Login successful.
 
-You have one project on this server: "cn-project%USER_ID%"
+You have one project on this server: "staging-project%USER_ID%"
 
-Using project "cn-project%USER_ID%".
+Using project "staging-project%USER_ID%".
 
-Welcome! See 'odo help' to get started.</code></pre>
-</div>
-</div>
-<div class="paragraph">
-<p>Then, create your <strong>Development Environment</strong>:</p>
-</div>
-<div class="tabset is-loading">
-<div class="ulist tabs">
-<ul>
-<li>
-<p><a id="tabset2_ide-task"></a>IDE Task</p>
-</li>
-<li>
-<p><a id="tabset2_cli"></a>CLI</p>
-</li>
-</ul>
-</div>
-<div class="content">
-<div class="tab-pane" aria-labelledby="tabset2_ide-task">
-<div class="paragraph">
-<p><code><strong>Click on 'Terminal' &#8594; 'Run Task&#8230;&#8203;' &#8594;  'OpenShift - Create Development Project'</strong></code></p>
-</div>
-<div class="imageblock">
-<div class="content">
-<img src="_images/che-runtask.png" alt="Che - RunTask" width="500">
-</div>
-</div>
-</div>
-<div class="tab-pane" aria-labelledby="tabset2_cli">
-<div class="paragraph">
-<p><code><strong>Execute the following commands in the '&gt;_ workshop_tools' terminal window</strong></code></p>
-</div>
-<div class="listingblock copypaste">
-<div class="content">
-<pre class="highlightjs highlight"><code class="language-shell hljs" data-lang="shell">odo project create my-project%USER_ID%</code></pre>
-</div>
-</div>
-<div class="admonitionblock note">
-<table>
-<tr>
-<td class="icon">
-<i class="fa icon-note" title="Note"></i>
-</td>
-<td class="content">
-To open a '&gt;_ workshop_tools' terminal window, <code><strong>click on 'Terminal' &#8594; 'Open Terminal in specific container' &#8594;  'workshop-tools'</strong></code>
-</td>
-</tr>
-</table>
-</div>
-</div>
-</div>
-</div>
-<div class="paragraph">
-<p>The output should be as follows:</p>
-</div>
-<div class="listingblock">
-<div class="content">
-<pre class="highlightjs highlight"><code class="language-shell hljs" data-lang="shell"> ✓  Project 'my-project%USER_ID%' is ready for use
- ✓  New project created and now using project: my-project%USER_ID%</code></pre>
+Welcome! See 'oc help' to get started.</code></pre>
 </div>
 </div>
 </div>
@@ -419,9 +342,9 @@ perform various tasks via a browser.</p>
 <div class="paragraph">
 <p><code><strong>Click on the 'Developer Console' button below</strong></code></p>
 </div>
-<div class="imageblock text-center params-link">
+<div class="imageblock params-link">
 <div class="content">
-<a class="image" href="https://console-openshift-console.%APPS_HOSTNAME_SUFFIX%/topology/ns/my-project%USER_ID%/graph" target="_blank" rel="noopener"><img src="_images/developer-console-button.png" alt="Developer Workspace - Button" width="300"></a>
+<a class="image" href="https://console-openshift-console.%APPS_HOSTNAME_SUFFIX%/topology/ns/staging-project%USER_ID%/graph"><img src="_images/developer-console-button.png" alt="Developer Workspace - Button" width="300"></a>
 </div>
 </div>
 <div class="paragraph">
@@ -430,7 +353,7 @@ then log in. After you have authenticated to the web console, you will be presen
 list of projects that your user has permission to work with.</p>
 </div>
 <div class="paragraph">
-<p><code><strong>Select the 'Developer View' then your 'my-project%USER_ID%'</strong></code> to be taken to the project overview page
+<p><code><strong>Select the 'Developer View' then your 'staging-project%USER_ID%'</strong></code> to be taken to the project overview page
 which will list all of the routes, services, deployments, and pods that you have
 running as part of your project. There&#8217;s nothing there now, but that&#8217;s about to
 change.</p>
