[CI] Publish Documentation for 9f1dd5ab8c146815de7b56d32f862087c355d055 - 9f1dd5ab8c146815de7b56d32f862087c355d055 🚀

--- a/debugging/5.0/developer-workspace.html
+++ b/debugging/5.0/developer-workspace.html
@@ -241,7 +241,7 @@ to this file.</p>
 </div>
 <div class="imageblock params-link">
 <div class="content">
-<a class="image" href="http://codeready-workspaces.%APPS_HOSTNAME_SUFFIX%/dashboard/#/ide/user%USER_ID%/wksp-debugging"><img src="_images/developer-workspace-button.svg" alt="Developer Workspace - Button" width="300"></a>
+<a class="image" href="http://codeready-workspaces.%APPS_HOSTNAME_SUFFIX%/dashboard/#/ide/user%USER_ID%/wksp-debugging"><img src="_images/developer-workspace-button.svg" alt="Developer Workspace - Button^" width="300"></a>
 </div>
 </div>
 <div class="paragraph">
