--- a/debugging/5.0/live-debugging.html
+++ b/debugging/5.0/live-debugging.html
@@ -130,7 +130,7 @@
 <h2 id="_mr_robot_please_help_me"><a class="anchor" href="#_mr_robot_please_help_me"></a>"Mr Robot", Please Help Me!</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p><em>20 MINUTES PRACTICE</em></p>
+<p><em>20 MINUTE PRACTICE</em></p>
 </div>
 <div class="paragraph">
 <p>After checking logs and traces we need the ability to do live debugging of my application, it&#8217;s an essential piece in the development process. It&#8217;s time to enter to the system running. How to penetrate to the secured kubernetes system, I need the POWER of Elliot Alderson.</p>
