--- a/debugging/5.0/reproduce-environment.html
+++ b/debugging/5.0/reproduce-environment.html
@@ -131,7 +131,7 @@
 <div id="preamble">
 <div class="sectionbody">
 <div class="paragraph">
-<p><em>15 MINUTES PRACTICE</em></p>
+<p><em>15 MINUTE PRACTICE</em></p>
 </div>
 <div class="paragraph">
 <p>Using <strong>Argo CD</strong>, GitOps continuous delivery tool for Kubernetes, you will be able to reproduce easily the environment of the <strong>Mysterious Apps</strong>.</p>
