--- a/debugging/5.0/visualize-service-mesh.html
+++ b/debugging/5.0/visualize-service-mesh.html
@@ -131,7 +131,7 @@
 <div id="preamble">
 <div class="sectionbody">
 <div class="paragraph">
-<p><em>15 MINUTES PRACTICE</em></p>
+<p><em>15 MINUTE PRACTICE</em></p>
 </div>
 <div class="paragraph">
 <p>The <strong>Mysterious Application</strong> in your developer environment is now up and running. It is composed of several components, but so far, you have no clue about how the application is working.
