[CI] Publish Documentation for ee5fe8debe3c6de3471eae3201f9934d2207636a - ee5fe8debe3c6de3471eae3201f9934d2207636a 🚀

--- a/debugging/5.0/reproduce-environment.html
+++ b/debugging/5.0/reproduce-environment.html
@@ -319,7 +319,7 @@ select the <code><strong>staging-project%USER_ID%</strong></code> to be taken to
 <p>You can see that all resources of your application have been created by Argo CD.</p>
 </div>
 <div class="paragraph">
-<p>Then, <strong>click on the</strong> <code><strong>Open URL</strong></code> <strong>icon of the Web Service</strong>.</p>
+<p>Then, <code><strong>click on the 'Open URL' icon of the Web Service</strong></code>.</p>
 </div>
 <div class="paragraph">
 <p>Your browser will be redirect to <strong>your Web Service running on OpenShift</strong>.
