--- a/debugging/5.0/perform-trace-analysis.html
+++ b/debugging/5.0/perform-trace-analysis.html
@@ -185,7 +185,7 @@ application traces and extract valuable information to solve the issues.</p>
 <p>From the <a href="https://kiali-istio-system.%APPS_HOSTNAME_SUFFIX%" target="_blank" rel="noopener">Kiali Console</a>, <code><strong>click on the 'Distributed Tracing'</strong></code> in the left navigation.</p>
 </div>
 <div class="paragraph">
-<p>Then <code><strong>login as user%USER_ID%/%OPENSHIFT_PASSWORD%</strong></code> and enter the following configuration:</p>
+<p>Then <code><strong>login as user%USER_ID%/%OPENSHIFT_PASSWORD% and enter the following configuration</strong></code>:</p>
 </div>
 <table class="tableblock frame-all grid-all stretch">
 <caption class="title">Table 1. Jaeger Settings</caption>
@@ -318,9 +318,9 @@ It is practically impossible to spin up the entire solution on your laptop to de
 <h2 id="_route_the_traffic_on_your_local_workspace"><a class="anchor" href="#_route_the_traffic_on_your_local_workspace"></a>Route the traffic on your local workspace</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>First we have to fix the problem. <strong>Replace the content of the</strong> <code><strong>getAll()</strong></code> <strong>method</strong> as following:</p>
+<p>First we have to fix the problem. `<strong>Replace the content of the 'getAll()' method</strong>`as following:</p>
 </div>
-<div class="listingblock">
+<div class="listingblock copypaste">
 <div class="title">CatalogController.java</div>
 <div class="content">
 <pre class="highlightjs highlight"><code class="language-java hljs" data-lang="java">@ResponseBody
@@ -422,7 +422,7 @@ You can now access application through web interface by adding <code><strong>/?r
 to the URL of deployed app:</p>
 </div>
 <div class="paragraph">
-<p><a href="{COOLSTORE_HOMEPAGE}/#!/?route=dist_trace" class="bare">{COOLSTORE_HOMEPAGE}/#!/?route=dist_trace</a></p>
+<p><a href="http://web-staging-project%USER_ID%.%APPS_HOSTNAME_SUFFIX%/#!/?route=dist_trace" class="bare">http://web-staging-project%USER_ID%.%APPS_HOSTNAME_SUFFIX%/#!/?route=dist_trace</a></p>
 </div>
 <div class="admonitionblock note">
 <table>
@@ -431,7 +431,7 @@ to the URL of deployed app:</p>
 <i class="fa icon-note" title="Note"></i>
 </td>
 <td class="content">
-<code><strong>route=lab3</strong></code> is not automatically added by Istio Workspace.
+<code><strong>route=dist_trace</strong></code> is not automatically added by Istio Workspace.
 This parameter, like any other should be handled (and appropriately propagated) by the application itself.
 </td>
 </tr>
@@ -442,7 +442,7 @@ This parameter, like any other should be handled (and appropriately propagated) 
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="_images/images/kiali-catalog-routed.png" alt="Catalog - Route Ike" width="700">
+<img src="_images/kiali-catalog-routed.png" alt="Catalog - Route Ike" width="700">
 </div>
 </div>
 <div class="paragraph">
@@ -454,7 +454,7 @@ Sadly, they will be still affected by the performance regression we just fixed.<
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="_images/images/ike-develop-catalog-hit.png" alt="Accessing new version of Catalog Service in Che" width="700">
+<img src="_images/ike-develop-catalog-hit.png" alt="Accessing new version of Catalog Service in Che" width="700">
 </div>
 </div>
 <div class="paragraph">
@@ -462,28 +462,14 @@ Sadly, they will be still affected by the performance regression we just fixed.<
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="_images/images/ike-develop-catalog-hit-jaeger.png" alt="New traces" width="800">
+<img src="_images/ike-develop-catalog-hit-jaeger.png" alt="New traces" width="800">
 </div>
 </div>
 <div class="paragraph">
 <p>Just wonderful! You reduced the response time by a factor of 5! You should be proud!</p>
 </div>
-</div>
-</div>
-<div class="sect1">
-<h2 id="_congratulations"><a class="anchor" href="#_congratulations"></a>CONGRATULATIONS!!!</h2>
-<div class="sectionbody">
 <div class="paragraph">
-<p>You make it but <strong>is the spinning top stopped or not at the end?</strong></p>
-</div>
-<div class="imageblock">
-<div class="content">
-<img src="_images/images/spinningtop.jpg" alt="Inception - Spinning Top" width="500">
-</div>
-<div class="title"> Inception. Christopher Nolan (Warner Bros. Pictures)</div>
-</div>
-<div class="paragraph">
-<p>We will never know and now, it is time to go deeper again!!</p>
+<p>Now, it is time to go deeper again!!</p>
 </div>
 </div>
 </div>
