--- a/debugging/5.0/reproduce-environment.html
+++ b/debugging/5.0/reproduce-environment.html
@@ -307,7 +307,7 @@ EOF</code></pre>
 <h2 id="_testing_the_application"><a class="anchor" href="#_testing_the_application"></a>Testing the application</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>In the <a href="https://console-openshift-console.%APPS_HOSTNAME_SUFFIX%/topology/ns/staging-project%USER_ID%/graph" target="_blank" rel="noopener">OpenShift Web Console</a>, from the <strong>Developer view</strong>,
+<p>In the <a href="https://console-openshift-console.%APPS_HOSTNAME_SUFFIX%/topology/ns/staging-project%USER_ID%/graph" class="params-link" target="_blank" rel="noopener">OpenShift Web Console</a>, from the <strong>Developer view</strong>,
 select the <code><strong>staging-project%USER_ID%</strong></code> to be taken to the project overview page.</p>
 </div>
 <div class="imageblock">
