[CI] Publish Documentation for e417a8dafdaf5380fc5149f0dc9edc77c525c564 - e417a8dafdaf5380fc5149f0dc9edc77c525c564 🚀

--- a/debugging/5.0/introduction.html
+++ b/debugging/5.0/introduction.html
@@ -87,7 +87,7 @@
     <a class="nav-link" href="perform-trace-analysis.html">5. Trace Within a Trace</a>
   </li>
   <li class="nav-item" data-depth="1">
-    <a class="nav-link" href="live-debugging.html">6. Please Help Me!</a>
+    <a class="nav-link" href="live-debugging.html">6. Debugger, please Help Me!</a>
   </li>
 </ul>
   </li>
