--- a/debugging/5.0/perform-trace-analysis.html
+++ b/debugging/5.0/perform-trace-analysis.html
@@ -87,7 +87,7 @@
     <a class="nav-link" href="perform-trace-analysis.html">5. Trace Within a Trace</a>
   </li>
   <li class="nav-item" data-depth="1">
-    <a class="nav-link" href="live-debugging.html">6. Please Help Me!</a>
+    <a class="nav-link" href="live-debugging.html">6. Debugger, please Help Me!</a>
   </li>
 </ul>
   </li>
@@ -423,7 +423,7 @@ to the URL of deployed app:</p>
 </div>
 <div class="listingblock copypaste">
 <div class="content">
-<pre class="highlightjs highlight"><code class="language-html hljs" data-lang="html">http://web-staging-project%USER_ID%.%APPS_HOSTNAME_SUFFIX%/?route=dist_trace</code></pre>
+<pre class="highlightjs highlight"><code class="language-html hljs" data-lang="html">http://web-staging-project%USER_ID%.%APPS_HOSTNAME_SUFFIX%/#!/?route=dist_trace</code></pre>
 </div>
 </div>
 <div class="admonitionblock note">
@@ -477,7 +477,7 @@ Sadly, they will be still affected by the performance regression we just fixed.<
 </div>
 <nav class="pagination">
   <span class="prev"><a href="visualize-service-mesh.html" class="query-params-link">4. Blindfolded debugging&#8230;&#8203; Not today</a></span>
-  <span class="next"><a href="live-debugging.html" class="query-params-link">6. Please Help Me!</a></span>
+  <span class="next"><a href="live-debugging.html" class="query-params-link">6. Debugger, please Help Me!</a></span>
 </nav>
 </article>
 <aside class="toc sidebar" data-title="Contents" data-levels="2">
