--- a/debugging/5.0/reproduce-environment.html
+++ b/debugging/5.0/reproduce-environment.html
@@ -87,7 +87,7 @@
     <a class="nav-link" href="perform-trace-analysis.html">5. Trace Within a Trace</a>
   </li>
   <li class="nav-item" data-depth="1">
-    <a class="nav-link" href="live-debugging.html">6. Please Help Me!</a>
+    <a class="nav-link" href="live-debugging.html">6. Debugger, please Help Me!</a>
   </li>
 </ul>
   </li>
@@ -171,7 +171,7 @@ deployments can track updates to branches, tags, or pinned to a specific version
 </div>
 <div class="imageblock params-link">
 <div class="content">
-<a class="image" href="https://argocd-server-argocd.%APPS_HOSTNAME_SUFFIX%"><img src="_images/developer-gitops-button.png" alt="Developer GitOps - Button" width="300"></a>
+<a class="image" href="https://argocd-server-argocd.%APPS_HOSTNAME_SUFFIX%" target="_blank" rel="noopener"><img src="_images/developer-gitops-button.png" alt="Developer GitOps - Button" width="300"></a>
 </div>
 </div>
 <div class="paragraph">
