--- a/debugging/5.0/visualize-service-mesh.html
+++ b/debugging/5.0/visualize-service-mesh.html
@@ -87,7 +87,7 @@
     <a class="nav-link" href="perform-trace-analysis.html">5. Trace Within a Trace</a>
   </li>
   <li class="nav-item" data-depth="1">
-    <a class="nav-link" href="live-debugging.html">6. Please Help Me!</a>
+    <a class="nav-link" href="live-debugging.html">6. Debugger, please Help Me!</a>
   </li>
 </ul>
   </li>
@@ -178,7 +178,7 @@ from abstract Applications to Services and Workloads.</p>
 <div class="paragraph">
 <p><code><strong>Click on the 'Developer Observability' button below</strong></code></p>
 </div>
-<div class="imageblock text-center params-link">
+<div class="imageblock params-link">
 <div class="content">
 <a class="image" href="https://kiali-istio-system.%APPS_HOSTNAME_SUFFIX%" target="_blank" rel="noopener"><img src="_images/developer-observability-button.png" alt="Developer Observability - Button" width="300"></a>
 </div>
