--- a/debugging/5.0/developer-workspace.html
+++ b/debugging/5.0/developer-workspace.html
@@ -87,7 +87,7 @@
     <a class="nav-link" href="perform-trace-analysis.html">5. Trace Within a Trace</a>
   </li>
   <li class="nav-item" data-depth="1">
-    <a class="nav-link" href="live-debugging.html">6. Please Help Me!</a>
+    <a class="nav-link" href="live-debugging.html">6. Debugger, please Help Me!</a>
   </li>
 </ul>
   </li>
@@ -241,7 +241,7 @@ to this file.</p>
 </div>
 <div class="imageblock params-link">
 <div class="content">
-<a class="image" href="http://codeready-workspaces.%APPS_HOSTNAME_SUFFIX%/dashboard/#/ide/user%USER_ID%/wksp-debugging"><img src="_images/developer-workspace-button.svg" alt="Developer Workspace - Button^" width="300"></a>
+<a class="image" href="http://codeready-workspaces.%APPS_HOSTNAME_SUFFIX%/dashboard/#/ide/user%USER_ID%/wksp-debugging" target="_blank" rel="noopener"><img src="_images/developer-workspace-button.svg" alt="Developer Workspace - Button^" width="300"></a>
 </div>
 </div>
 <div class="paragraph">
@@ -344,7 +344,7 @@ perform various tasks via a browser.</p>
 </div>
 <div class="imageblock params-link">
 <div class="content">
-<a class="image" href="https://console-openshift-console.%APPS_HOSTNAME_SUFFIX%/topology/ns/staging-project%USER_ID%/graph"><img src="_images/developer-console-button.png" alt="Developer Workspace - Button" width="300"></a>
+<a class="image" href="https://console-openshift-console.%APPS_HOSTNAME_SUFFIX%/topology/ns/staging-project%USER_ID%/graph" target="_blank" rel="noopener"><img src="_images/developer-console-button.png" alt="Developer Workspace - Button" width="300"></a>
 </div>
 </div>
 <div class="paragraph">
