--- a/debugging/5.0/reproduce-environment.html
+++ b/debugging/5.0/reproduce-environment.html
@@ -243,13 +243,13 @@ logs, events, and assessed health status.</p>
 <i class="fa icon-note" title="Note"></i>
 </td>
 <td class="content">
-To open a '&gt;_ workshop_tools' terminal window, <code><strong>click on 'Terminal' &#8594; 'Open Terminal in specific container' &#8594;  'workshop-tools'</strong></code>
+To open a '&gt;_ workshop_tools' terminal window in CodeReady Workspaces, <code><strong>click on 'Terminal' &#8594; 'Open Terminal in specific container' &#8594;  'workshop-tools'</strong></code>
 </td>
 </tr>
 </table>
 </div>
 <div class="paragraph">
-<p>Create the Istio <strong>Gateway</strong> and its <strong>VirtualService</strong> <code><strong>by executing the following commands in the '&gt;_ workshop_tools' terminal window</strong></code></p>
+<p>In your <a href="http://codeready-workspaces.%APPS_HOSTNAME_SUFFIX%" class="params-link" target="_blank" rel="noopener">Workspace</a>, create the Istio <strong>Gateway</strong> and its <strong>VirtualService</strong> <code><strong>by executing the following commands in the '&gt;_ workshop_tools' terminal window</strong></code></p>
 </div>
 <div class="listingblock copypaste">
 <div class="content">
