[CI] Publish Documentation for f369465a662b242669bd1587a4111cbc0d40e893 - f369465a662b242669bd1587a4111cbc0d40e893 🚀

--- a/debugging/5.0/live-debugging.html
+++ b/debugging/5.0/live-debugging.html
@@ -578,7 +578,7 @@ to verify how it works now.</p>
 <p><strong>If it looks ok we are ready to roll it out to production!</strong></p>
 </div>
 <div class="paragraph">
-<p><code><strong>You can now stop ike process in the terminal by pressing Ctrl+C</strong></code>. This will result in undeploying our special instance which we just used for debugging purposes.</p>
+<p><code><strong>You can now stop the "Inventory - Route Traffic to Local" (ike) process in the terminal by pressing Ctrl+C</strong></code>. This will result in undeploying our special instance which we just used for debugging purposes.</p>
 </div>
 <div class="paragraph">
 <p>Well done and congratulations for completing all the labs.</p>
