--- a/debugging/5.0/perform-trace-analysis.html
+++ b/debugging/5.0/perform-trace-analysis.html
@@ -471,6 +471,9 @@ Sadly, they will be still affected by the performance regression we just fixed.<
 <p>Just wonderful! You reduced the response time by a factor of 5! You should be proud!</p>
 </div>
 <div class="paragraph">
+<p><code><strong>You can now stop the "Catalog - Route Traffic to Local" (ike) process in the terminal by pressing Ctrl+C</strong></code>. This will result in undeploying our special instance which we just used for debugging purposes.</p>
+</div>
+<div class="paragraph">
 <p>Now, it is time to go deeper again!!</p>
 </div>
 </div>
